# wasmer-test

./: Cargo.toml  LICENSE
application/: Cargo.toml
application/src/: errors.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
