[package]
name = "application"
version = "0.1.0"
authors = ["dbcfd <bdbrowning2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
common = { path = "../common" }
env_logger = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
wasmer = "1.0"
wasmer-wasi = "1.0"
thiserror = "1.0"
