[package]
name = "plugin"
version = "0.1.0"
authors = ["dbcfd <bdbrowning2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
common = { path = "../common" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ['rlib', 'cdylib']
